tests/compile-fail/integration__integration__mapfiles__intrinsic_op_output_arg_wrong_type.snap
---
source: tests/integration/mapfiles.rs
expression: stderr
---
error: bad ABI for intrinsic: output arg has unexpected encoding (float)
  ┌─ <mapfile-1>:5:4
  │
5 │ 99 fS
  │    ^^ output arg has unexpected encoding (float)


